--- a/components/Chatbot/layouts/Chat/Chat.scss
+++ b/components/Chatbot/layouts/Chat/Chat.scss
@@ -8,11 +8,6 @@
     padding-bottom: 0;
   }
 
-  .pf-chatbot__messages-overflow {
-    padding-top: var(--pf-t--global--spacer--400);
-    padding-bottom: var(--pf-t--global--spacer--400);
-  }
-
 }
 
 
